# plutus-rating

./: README.md  hie.yaml  plutus-rating.cabal
src/: rating.hs
src/Rating/: Rating.hs
test/Rating/: TestTrace.hs
